update: dark mode bugs fixes

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,5 +6,6 @@
 
 /* Custom Css */
 .plans .swiper-slide {
-  border-radius:1.5rem
+  border-radius:1.5rem;
+  width:80%
 }
